# tauri

./: package-lock.json  package.json  sign.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fonts/: arialbd_base64.txt
src-tauri/icons/: icon.icns
src-tauri/printer/: print.js
src-tauri/src/: lib.rs  main.rs
