[package]
name = "topdev"
version = "1.0.0"
description = "TOP DEV"
authors = ["Devozilla"]
edition = "2021"

[lib]
name = "top_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-printer-v2 = "0.2.4"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
base64 = "0.22.1"
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
barcoders = "2"
ab_glyph = "0.2.13"
powersync = "0.0.5"
tauri-plugin-powersync = "0.0.4"
async-trait = "0.1.89"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
